Phase 2 blocks 5 abridged + 6: tab completion, docs, 0.9.0 tag
Block 5 abridged:
 - SpyglassSuggestions now consults the registered QueryParamHandlers via
   Cloud's BlockingSuggestionProvider. Typing `p:` suggests online
   players, `a:` suggests enabled events, `b:` suggests block
   materials, etc. Flag completion (-ng/-g/-nc/-ex/-ord=asc|desc)
   added.
 - Dropped scope for this pass: tool wand, MiniMessage template
   extraction, migration tool, @ApiStatus.Internal pass. Tracked
   in docs/phase2-notes.md § "Deferred to Phase 3".

Block 6:
 - Version bumped from 0.1.0-SNAPSHOT to 0.9.0 (feature-parity RC
   rather than 1.0.0 since entity-NBT rollback, FAWE, and the
   migration tool aren't yet shipped).
 - Built clean release artifact: plugin/build/libs/Spyglass-0.9.0.jar
 - README rewritten for external users.
 - docs/phase2-notes.md records the full commit chain, what landed,
   and the Phase 3 backlog in priority order.

regression: 21/21 cases green across the entire Phase 2 commit range.
Unit tests: 34/34 green (30 plugin + 4 api).